# psr-test-gha

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
scripts/: build.sh
src/project/: __init__.py  __main__.py
